fix horizontal scroll on transition

--- a/src/styles/_trumps.transitions.scss
+++ b/src/styles/_trumps.transitions.scss
@@ -5,12 +5,12 @@
 
   &-enter {
     opacity: 0;
-    transform: scale(1.05);
+    transform: scale(1.02);
   }
 
   &-leave {
     opacity: 0;
-    transform: scale(.95);
+    transform: scale(.98);
   }
 }
 
